--- a/web/skins/system/dtml/it/frame-private-head.html
+++ b/web/skins/system/dtml/it/frame-private-head.html
@@ -10,6 +10,7 @@
 	
     <link rel="stylesheet" type="text/css" href="skins/system/css/layout.css"/>
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+    <link href='http://fonts.googleapis.com/css?family=Oregano' rel='stylesheet' type='text/css' />
 
 
     <script type="text/javascript" src="skins/system/js/jqueryUi/jquery-1.9.1.js"></script>
