--- a/web/skins/theme/dtml/en/single/vp_dintorni_single.html
+++ b/web/skins/theme/dtml/en/single/vp_dintorni_single.html
@@ -14,19 +14,8 @@
             <div class="one-half">
                 <!-- BEGIN #map-widget-wrapper -->
                    {$widget_map}
-
             </div>
             <div class="one-half last-col">
-                <h3 class="title1">Serivizi<span class="title-end"></span></h3>
-                <div class="clearfix">
-                    <div class="one-third servizi-wrapper">
-                        <ul class="list3">
-                            {foreach from=$instance->vp_room_vp_servizi item=servizi}
-                            <li>{$servizi->id_vp_servizi->nome}</li>
-                            {/foreach}
-                        </ul>
-                    </div>
-                </div>
                 <div class="booknow-accompage">
                     <div class="book-price">
                         <h2 class="price"><span class="cheap-price-detail">a partire da</span>&euro; 30</h2>
@@ -46,6 +35,19 @@
                         </div>
                         <input class="bookbutton" type="submit" value="Prenota" />
                     </form>
+                </div>
+                <div class="service-wrapper">
+                    <h3 class="title1">Serivizi<span class="title-end"></span></h3>
+                    <div class="clearfix">
+                        <div class="one-third servizi-wrapper">
+                            <ul class="list3">
+                                <li>It's coming..</li>
+                                {foreach from=$instance->vp_room_vp_servizi item=servizi}
+                                <li>{$servizi->id_vp_servizi->nome}</li>
+                                {/foreach}
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
