--- a/web/skins/theme/dtml/it/booking.html
+++ b/web/skins/theme/dtml/it/booking.html
@@ -76,9 +76,10 @@
                         <span class="title-end"></span>
                     </h3>
                     <p>
-                        Riceverete una conferma via email nelle prossime ore. In caso di urgenza si prega di contattarci telefonicamente. Il prezzo mostrato è puramente indicativo,
-                        ricevere via email la nostra migliore offerta per le vostre esigenze. Vi chiediamo di specificare eventuali esigenze (orario particolare di arrivo e/o partenza,
-                        particolari allergie, etc..).
+                        Riceverete una conferma via email nelle prossime ore. In caso di urgenza si prega di contattarci telefonicamente.
+                        Il prezzo mostrato &egrave; puramente indicativo, riceverete via email la nostra migliore offerta per le vostre esigenze.
+                        Vi chiediamo di specificare eventuali esigenze (orario particolare di arrivo e/o partenza, particolari allergie,
+                        etc..).
                     </p>
                     <ul>
                         <li>Per modifiche ad una prenotazione contattare <a href="skype:+393479749101?call">+393479749101</a></li>
