--- a/web/progettazioneV2/navDintorniSingolo.html
+++ b/web/progettazioneV2/navDintorniSingolo.html
@@ -166,7 +166,7 @@
                 </li>
             </ul>
         </li>
-        <li class="current-menu-item">
+        <li  class="current-menu-item">
             <a href="navDintorni.html" class="sf-with-ul">Dintorni<span class="sf-sub-indicator"> »</span></a>
             <ul style="display: none; visibility: hidden;">
                 <li class="text_capitalize">
@@ -181,7 +181,7 @@
             </ul>
         </li>
         <li>
-            <a href="navDoveSiamo.html">Dove SIamo</a>
+            <a href="navDoveSiamo.html">Dove Siamo</a>
         </li>
         <!-- END #main-menu -->
     </ul>
@@ -210,27 +210,31 @@
                 <!-- BEGIN #slides -->
                 <div id="slides1" class="" style="height: 324px; border: 1px dotted #000;">
                     <!-- BEGIN .slides_container -->
-                    <h1 style="text-align: center; position:relative; top: 45%;">MAPPA</h1>
-                    <!-- END #slides -->
+                    <h1 style="text-align: center; position:relative; top: 40%;">MAPPA</h1>
+                    <h2 style="text-align: center; position:relative; top: 40%;">450px * 326px</h1>
+                        <!-- END #slides -->
                 </div>
             </div>
             <div class="one-half last-col">
                 <div class="booknow-accompage">
                     <div class="book-price" style="border: 1px dotted #fff">
-                        <h2 class="price" style="text-align: center; position:relative; top: 15%%; color:#fff;">Prezzo</h2>
+                        <h2 class="price" style="text-align: center; position:relative; top: 0; color:#fff;">Prezzo</h2>
+                        <h3 class="price" style="text-align: center; position:relative; top: -15%; color:#fff;font-size: 22px;">153px * 111px</h3>
                     </div>
                     <form class="booking-form booking-form-accompage" name="bookroom" action="navPrenota.html" method="post">
                         <div style="padding-bottom: 5px; border: 1px dotted #fff; height: 75px; margin-bottom: 5px;">
-                            <h1 style="text-align: center; position:relative; top: 30%%; color:#fff;">Prenotazione</h1>
+                            <h1 style="text-align: center; position:relative; top: 20%; color:#fff;">Prenotazione</h1>
+                            <h2 style="text-align: center; position:relative; top: 10%; color:#fff;">240px * 82px</h2>
                         </div>
                         <input class="bookbutton" type="submit" value="Prenota"/>
                     </form>
                 </div>
                 <div class="service-wrapper">
-                    <h3 class="title1">Attivit&agrave; consigliata<span class="title-end"></span></h3>
+                    <h3 class="title1">Servizi<span class="title-end"></span></h3>
                     <div class="clearfix">
                         <div class="servizi-wrapper" style="border: 1px dotted #000; height: 100px; min-height:100px;">
-                            <h1 style="text-align: center; position:relative; top: 45%;">ELENCO ATTIVIT&Agrave;</h1>
+                            <h1 style="text-align: center; position:relative; top: 30%;">ELENCO ATTIVIT&Agrave;</h1>
+                            <h2 style="text-align: center; position:relative; top: 20%;">450px * 102px</h2>
                         </div>
                     </div>
                 </div>
@@ -240,6 +244,7 @@
 
         <div style="border: 1px dotted #000; height: 189px; margin-bottom: 10px;">
             <h1 style="text-align: center; position:relative; top: 45%;">TESTO</h1>
+            <h2 style="text-align: center; position:relative; top: 45%;">920px * ???</h2>
         </div>
         <!-- END .page-content -->
     </div>
@@ -251,12 +256,14 @@
     <!-- BEGIN .two-forths -->
     <div class="two-forths" style="height: 316px; border: 1px dotted #fff; width: 47.343%;">
         <h1 style="text-align: center; position:relative; top: 45%;">Badge partner</h1>
+        <h2 style="text-align: center; position:relative; top: 60%;">437px * 317px</h2>
         <!-- END .two-forths -->
     </div>
 
     <!-- BEGIN .one-forth -->
     <div class="one-forth" style="height: 316px; border: 1px dotted #fff;">
         <h1 style="text-align: center; position:relative; top: 45%;">Site Map</h1>
+        <h2 style="text-align: center; position:relative; top: 60%;">210px * 317px</h2>
         <!-- BEGIN .widget -->
         <!-- END .one-forth -->
     </div>
@@ -266,6 +273,7 @@
 
         <!-- BEGIN .widget -->
         <h1 style="text-align: center; position:relative; top: 45%;">Flickr</h1>
+        <h2 style="text-align: center; position:relative; top: 60%;">210px * 317px</h2>
         <!-- END .one-forth -->
     </div>
 
@@ -274,18 +282,9 @@
 
 <!-- BEGIN #footer-bottom -->
 <div id="footer-bottom" class="clearfix">
-    <h1 style="text-align: center;">copyright</h1>
-
+    <h1 style="text-align: center;display: inline-block;margin-right: 30px;position: relative;left: 36%;">copyright</h1>
+    <h2 style="text-align: center;display: inline-block;position: relative;left: 37%;">960px * 63px</h2>
 </div>
-<script>
-    var $container = $('#container');
-
-    $container.imagesLoaded( function(){
-        $container.isotope({
-            // options...
-        });
-    });
-</script>
 </div>
 
 <!-- END .content-body -->
