--- a/web/progettazioneV2/navCamera.html
+++ b/web/progettazioneV2/navCamera.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html dir="ltr" lang="en-US" class="csstransforms no-csstransforms3d csstransitions"><script id="tinyhippos-injected" style="">if (window.top.ripple) { window.top.ripple("bootstrap").inject(window, document); }</script><!--<![endif]--><!-- BEGIN head --><head>
     <!--Meta Tags-->
     <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">
@@ -32,14 +31,26 @@
     <script type="text/javascript" src="../skins/theme/js/slides.min.jquery.js"></script>
     <script type="text/javascript" src="../skins/theme/js/scripts.js"></script>
 
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyD4z-CRyQSat_S0NveE5efiG9aQ1UjuhkU&amp;sensor=false"></script><script src="http://maps.gstatic.com/intl/it_it/mapfiles/api-3/14/7/main.js" type="text/javascript"></script>
+    <script type="text/javascript"
+            src="http://maps.google.com/maps/api/js?key=AIzaSyD4z-CRyQSat_S0NveE5efiG9aQ1UjuhkU&amp;sensor=false"></script>
+    <script src="http://maps.gstatic.com/intl/it_it/mapfiles/api-3/14/7/main.js" type="text/javascript"></script>
 
     <!--[if (gte IE 6)&(lte IE 8)]>
     <script type="text/javascript" src="skins/theme/js/selectivizr-min.js"></script>
     <![endif]-->
 
     <!-- END head -->
-    <link rel="stylesheet" href="data:text/css,@import%20url%28%27%20http%3A//c1.tacdn.com/css2/widget/cdswidFRR-v1250510475a.css%20%27%29%3B"><script type="text/javascript" src="http://c1.tacdn.com/js3/widget/cdswidgets_m-c-v1378593179a.js"></script><script>window["_GOOG_TRANS_EXT_VER"] = "1";</script><script type="text/javascript" charset="UTF-8" src="http://maps.gstatic.com/cat_js/intl/it_it/mapfiles/api-3/14/7/%7Bcommon,util,stats%7D.js"></script><script type="text/javascript" charset="UTF-8" src="http://maps.gstatic.com/cat_js/intl/it_it/mapfiles/api-3/14/7/%7Bcommon,util,stats%7D.js"></script><script type="text/javascript" charset="UTF-8" src="http://maps.googleapis.com/maps/api/js/AuthenticationService.Authenticate?1shttp%3A%2F%2Fvecchiaposta.local%2Findex.php&amp;5e1&amp;callback=_xdc_._43n8y8&amp;token=110940"></script></head>
+    <link rel="stylesheet"
+          href="data:text/css,@import%20url%28%27%20http%3A//c1.tacdn.com/css2/widget/cdswidFRR-v1250510475a.css%20%27%29%3B">
+    <script type="text/javascript" src="http://c1.tacdn.com/js3/widget/cdswidgets_m-c-v1378593179a.js"></script>
+    <script>window["_GOOG_TRANS_EXT_VER"] = "1";</script>
+    <script type="text/javascript" charset="UTF-8"
+            src="http://maps.gstatic.com/cat_js/intl/it_it/mapfiles/api-3/14/7/%7Bcommon,util,stats%7D.js"></script>
+    <script type="text/javascript" charset="UTF-8"
+            src="http://maps.gstatic.com/cat_js/intl/it_it/mapfiles/api-3/14/7/%7Bcommon,util,stats%7D.js"></script>
+    <script type="text/javascript" charset="UTF-8"
+            src="http://maps.googleapis.com/maps/api/js/AuthenticationService.Authenticate?1shttp%3A%2F%2Fvecchiaposta.local%2Findex.html&amp;5e1&amp;callback=_xdc_._43n8y8&amp;token=110940"></script>
+</head>
 
 <!-- BEGIN body -->
 <body cz-shortcut-listen="true">
@@ -81,7 +92,7 @@
 
     <!-- BEGIN .top-menu-wrapper -->
     <div class="top-menu-wrapper fr clearfix">
-        <a href="navPrenota.html" class="button1 fl">Prenota ora</a>
+        <a href="booking.php" class="button1 fl">Prenota ora</a>
         <ul class="top-menu fr">
             <li><a href="#">a</a><span> /</span></li>
             <li><a href="#">aA</a><span> /</span></li>
@@ -102,10 +113,11 @@
     </div>
     <div id="last-offert">
         <div style="border: 1px dotted #000; height: 60px; margin-bottom: 5px;">
-            <h1 style="text-align: center; position:relative; top: 30%;">Preview offerta</h1>
+            <h1 style="text-align: center; position:relative; top: 5%;">Preview offerta</h1>
+            <h2 style="text-align: center; position:relative; top: 15%;">384px * 62px</h2>
         </div>
         <div>
-            <a href="navPrenota.html?vp_offerta_id=1" class="button2">Prenota</a>
+            <a href="navPrenota.html" class="button2">Prenota</a>
         </div>
         <!-- END .blog-content -->
     </div>
@@ -121,8 +133,8 @@
         <li>
             <a href="index.html">Home</a>
         </li>
-        <li class="current-menu-item">
-            <a href="navCamere.html" class="sf-with-ul">Camere<span class="sf-sub-indicator"> »</span></a>
+        <li  class="current-menu-item">
+            <a href="navCamere.html" class="sf-with-ul">Camere<span class="sf-sub-indicator"> &raquo;</span></a>
             <ul style="display: none; visibility: hidden;">
                 <li class="text_capitalize">
                     <a href="navCamera.html">Camera singola</a>
@@ -139,7 +151,7 @@
             </ul>
         </li>
         <li>
-            <a href="navAttivita.html" class="sf-with-ul">Attivit&agrave;<span class="sf-sub-indicator"> »</span></a>
+            <a href="navAttivita.html" class="sf-with-ul">Attività<span class="sf-sub-indicator"> &raquo;</span></a>
             <ul style="display: none; visibility: hidden;">
                 <li class="text_capitalize">
                     <a href="navAttivitaSingola.html">Ippovia del Gran Sasso</a>
@@ -153,9 +165,9 @@
             </ul>
         </li>
         <li>
-            <a href="navEventi.html" class="sf-with-ul">Eventi<span class="sf-sub-indicator"> »</span></a>
+            <a href="navEventi.html" class="sf-with-ul">Eventi<span class="sf-sub-indicator"> &raquo;</span></a>
             <ul style="display: none; visibility: hidden;">
-                <li class="text_capitalize" >
+                <li class="text_capitalize">
                     <a href="navEvento.html">Perdonanza Celestiniana</a>
                 </li>
                 <li class="text_capitalize">
@@ -167,7 +179,7 @@
             </ul>
         </li>
         <li>
-            <a href="navDintorni.html" class="sf-with-ul">Dintorni<span class="sf-sub-indicator"> »</span></a>
+            <a href="navDintorni.html" class="sf-with-ul">Dintorni<span class="sf-sub-indicator"> &raquo;</span></a>
             <ul style="display: none; visibility: hidden;">
                 <li class="text_capitalize">
                     <a href="navDintorniSingolo.html">Amatrice</a>
@@ -181,7 +193,7 @@
             </ul>
         </li>
         <li>
-            <a href="navDoveSiamo.html">Dove Siamo</a>
+            <a href="dove-siamo.html">Dove SIamo</a>
         </li>
         <!-- END #main-menu -->
     </ul>
@@ -210,18 +222,21 @@
                 <!-- BEGIN #slides -->
                 <div id="slides1" class="" style="height: 324px; border: 1px dotted #000;">
                     <!-- BEGIN .slides_container -->
-                    <h1 style="text-align: center; position:relative; top: 45%;">SLIDER IMG</h1>
+                    <h1 style="text-align: center; position:relative; top: 40%;">SLIDER IMG</h1>
+                    <h2 style="text-align: center; position:relative; top: 40%;">450px * 326px</h1>
                     <!-- END #slides -->
                 </div>
             </div>
             <div class="one-half last-col">
                 <div class="booknow-accompage">
                     <div class="book-price" style="border: 1px dotted #fff">
-                        <h2 class="price" style="text-align: center; position:relative; top: 15%%; color:#fff;">Prezzo</h2>
+                        <h2 class="price" style="text-align: center; position:relative; top: 0; color:#fff;">Prezzo</h2>
+                        <h3 class="price" style="text-align: center; position:relative; top: -15%; color:#fff;font-size: 22px;">153px * 111px</h3>
                     </div>
                     <form class="booking-form booking-form-accompage" name="bookroom" action="navPrenota.html" method="post">
                         <div style="padding-bottom: 5px; border: 1px dotted #fff; height: 75px; margin-bottom: 5px;">
-                            <h1 style="text-align: center; position:relative; top: 30%%; color:#fff;">Prenotazione</h1>
+                            <h1 style="text-align: center; position:relative; top: 20%; color:#fff;">Prenotazione</h1>
+                            <h2 style="text-align: center; position:relative; top: 10%; color:#fff;">240px * 82px</h2>
                         </div>
                         <input class="bookbutton" type="submit" value="Prenota"/>
                     </form>
@@ -230,7 +245,8 @@
                     <h3 class="title1">Servizi<span class="title-end"></span></h3>
                     <div class="clearfix">
                         <div class="servizi-wrapper" style="border: 1px dotted #000; height: 100px; min-height:100px;">
-                            <h1 style="text-align: center; position:relative; top: 45%;">ELENCO SERVIZI</h1>
+                            <h1 style="text-align: center; position:relative; top: 30%;">ELENCO SERVIZI</h1>
+                            <h2 style="text-align: center; position:relative; top: 20%;">450px * 102px</h2>
                         </div>
                     </div>
                 </div>
@@ -240,6 +256,7 @@
 
         <div style="border: 1px dotted #000; height: 189px; margin-bottom: 10px;">
             <h1 style="text-align: center; position:relative; top: 45%;">TESTO</h1>
+            <h2 style="text-align: center; position:relative; top: 45%;">920px * ???</h2>
         </div>
         <!-- END .page-content -->
     </div>
@@ -251,12 +268,14 @@
     <!-- BEGIN .two-forths -->
     <div class="two-forths" style="height: 316px; border: 1px dotted #fff; width: 47.343%;">
         <h1 style="text-align: center; position:relative; top: 45%;">Badge partner</h1>
+        <h2 style="text-align: center; position:relative; top: 60%;">437px * 317px</h2>
         <!-- END .two-forths -->
     </div>
 
     <!-- BEGIN .one-forth -->
     <div class="one-forth" style="height: 316px; border: 1px dotted #fff;">
         <h1 style="text-align: center; position:relative; top: 45%;">Site Map</h1>
+        <h2 style="text-align: center; position:relative; top: 60%;">210px * 317px</h2>
         <!-- BEGIN .widget -->
         <!-- END .one-forth -->
     </div>
@@ -266,6 +285,7 @@
 
         <!-- BEGIN .widget -->
         <h1 style="text-align: center; position:relative; top: 45%;">Flickr</h1>
+        <h2 style="text-align: center; position:relative; top: 60%;">210px * 317px</h2>
         <!-- END .one-forth -->
     </div>
 
@@ -274,18 +294,9 @@
 
 <!-- BEGIN #footer-bottom -->
 <div id="footer-bottom" class="clearfix">
-    <h1 style="text-align: center;">copyright</h1>
-
+    <h1 style="text-align: center;display: inline-block;margin-right: 30px;position: relative;left: 36%;">copyright</h1>
+    <h2 style="text-align: center;display: inline-block;position: relative;left: 37%;">960px * 63px</h2>
 </div>
-<script>
-    var $container = $('#container');
-
-    $container.imagesLoaded( function(){
-        $container.isotope({
-            // options...
-        });
-    });
-</script>
 </div>
 
 <!-- END .content-body -->
