--- a/web/progettazioneV2/navEvento.html
+++ b/web/progettazioneV2/navEvento.html
@@ -39,7 +39,7 @@
     <![endif]-->
 
     <!-- END head -->
-<link rel="stylesheet" href="data:text/css,@import%20url%28%27%20http%3A//c1.tacdn.com/css2/widget/cdswidFRR-v1250510475a.css%20%27%29%3B"><script type="text/javascript" src="http://c1.tacdn.com/js3/widget/cdswidgets_m-c-v1378593179a.js"></script><script>window["_GOOG_TRANS_EXT_VER"] = "1";</script><script type="text/javascript" charset="UTF-8" src="http://maps.gstatic.com/cat_js/intl/it_it/mapfiles/api-3/14/7/%7Bcommon,util,stats%7D.js"></script><script type="text/javascript" charset="UTF-8" src="http://maps.gstatic.com/cat_js/intl/it_it/mapfiles/api-3/14/7/%7Bcommon,util,stats%7D.js"></script><script type="text/javascript" charset="UTF-8" src="http://maps.googleapis.com/maps/api/js/AuthenticationService.Authenticate?1shttp%3A%2F%2Fvecchiaposta.local%2Findex.php&amp;5e1&amp;callback=_xdc_._43n8y8&amp;token=110940"></script></head>
+    <link rel="stylesheet" href="data:text/css,@import%20url%28%27%20http%3A//c1.tacdn.com/css2/widget/cdswidFRR-v1250510475a.css%20%27%29%3B"><script type="text/javascript" src="http://c1.tacdn.com/js3/widget/cdswidgets_m-c-v1378593179a.js"></script><script>window["_GOOG_TRANS_EXT_VER"] = "1";</script><script type="text/javascript" charset="UTF-8" src="http://maps.gstatic.com/cat_js/intl/it_it/mapfiles/api-3/14/7/%7Bcommon,util,stats%7D.js"></script><script type="text/javascript" charset="UTF-8" src="http://maps.gstatic.com/cat_js/intl/it_it/mapfiles/api-3/14/7/%7Bcommon,util,stats%7D.js"></script><script type="text/javascript" charset="UTF-8" src="http://maps.googleapis.com/maps/api/js/AuthenticationService.Authenticate?1shttp%3A%2F%2Fvecchiaposta.local%2Findex.php&amp;5e1&amp;callback=_xdc_._43n8y8&amp;token=110940"></script></head>
 
 <!-- BEGIN body -->
 <body cz-shortcut-listen="true">
@@ -53,8 +53,8 @@
 <!-- BEGIN .content-body -->
 <div class="content-body">
 
-    <!-- BEGIN #header-google-map -->
-    <!--ITALIANO-->
+<!-- BEGIN #header-google-map -->
+<!--ITALIANO-->
 <div id="header-google-map" style="display:none;">
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><script src="http://maps.gstatic.com/intl/it_it/mapfiles/api-3/14/7/main.js" type="text/javascript"></script>
     <script type="text/javascript" src="skins/theme/js/gmap.js"></script>
@@ -102,90 +102,90 @@
     </div>
     <div id="last-offert">
         <div style="border: 1px dotted #000; height: 60px; margin-bottom: 5px;">
-                <h1 style="text-align: center; position:relative; top: 30%;">Preview offerta</h1>
+            <h1 style="text-align: center; position:relative; top: 30%;">Preview offerta</h1>
         </div>
-            <div>
-                <a href="navPrenota.html?vp_offerta_id=1" class="button2">Prenota</a>
-            </div>
-            <!-- END .blog-content -->
+        <div>
+            <a href="navPrenota.html?vp_offerta_id=1" class="button2">Prenota</a>
+        </div>
+        <!-- END .blog-content -->
     </div>
     <!-- END .title-wrapper -->
 </div>
 
-    <!-- BEGIN #navigation -->
-    <!--ITALIANO -->
+<!-- BEGIN #navigation -->
+<!--ITALIANO -->
 <div id="navigation" class="clearfix">
 
     <!-- BEGIN #main-menu -->
-        <ul id="main-menu" class="fl clearfix sf-js-enabled sf-shadow">
-                                                        <li>
-                        <a href="index.html">Home</a>
-                                                    </li>
-                                                                                                                                                    <li>
-                        <a href="navCamere.html" class="sf-with-ul">Camere<span class="sf-sub-indicator"> »</span></a>
-                                                            <ul style="display: none; visibility: hidden;">
-                                                                                                <li class="text_capitalize">
-                                        <a href="navCamera.html">Camera singola</a>
-                                    </li>
-                                                                                                                                    <li class="text_capitalize">
-                                        <a href="navCamera.html">Camera doppia</a>
-                                    </li>
-                                                                                                                                    <li class="text_capitalize">
-                                        <a href="navCamera.html">Camera tripla</a>
-                                    </li>
-                                                                                                                                    <li class="text_capitalize">
-                                        <a href="navCamera.html">Camera quadrupla</a>
-                                    </li>
-                                                                                        </ul>
-                                    </li>
-                                                                                                                                                                                            <li>
-                        <a href="navAttivita.html" class="sf-with-ul">Attivit&agrave;<span class="sf-sub-indicator"> »</span></a>
-                                                            <ul style="display: none; visibility: hidden;">
-                                                                                                <li class="text_capitalize">
-                                        <a href="navAttivitaSingola.html">Ippovia del Gran Sasso</a>
-                                    </li>
-                                                                                                                                    <li class="text_capitalize">
-                                        <a href="navAttivitaSingola.html">L'anello del Lago</a>
-                                    </li>
-                                                                                                                                    <li class="text_capitalize">
-                                        <a href="navAttivitaSingola.html">Da cagnano al Gran Sasso</a>
-                                    </li>
-                                                                                        </ul>
-                                    </li>
-                                                                                                                                <li class="current-menu-item">
-                        <a href="navEventi.html" class="sf-with-ul">Eventi<span class="sf-sub-indicator"> »</span></a>
-                                                            <ul style="display: none; visibility: hidden;">
-                                                                                                <li class="text_capitalize" >
-                                        <a href="navEvento.html">Perdonanza Celestiniana</a>
-                                    </li>
-                                                                                                                                    <li class="text_capitalize">
-                                        <a href="navEvento.html">Fiera della befana</a>
-                                    </li>
-                                                                                                                                    <li class="text_capitalize">
-                                        <a href="navEvento.html">Festa del Cioccolato</a>
-                                    </li>
-                                                                                        </ul>
-                                    </li>
-                                                                    <li>
-                        <a href="navDintorni.html" class="sf-with-ul">Dintorni<span class="sf-sub-indicator"> »</span></a>
-                                                            <ul style="display: none; visibility: hidden;">
-                                                                                                <li class="text_capitalize">
-                                        <a href="navDintorniSingolo.html">Amatrice</a>
-                                    </li>
-                                                                                                                                    <li class="text_capitalize">
-                                        <a href="navDintorniSingolo.html">L'Aquila</a>
-                                    </li>
-                                                                                                                                    <li class="text_capitalize">
-                                        <a href="navDintorniSingolo.html">Lago di Campotosto</a>
-                                    </li>
-                                                                                        </ul>
-                                    </li>
-                                                                    <li>
-                        <a href="navDoveSiamo">Dove SIamo</a>
-                                                    </li>
-                            <!-- END #main-menu -->
+    <ul id="main-menu" class="fl clearfix sf-js-enabled sf-shadow">
+        <li>
+            <a href="index.html">Home</a>
+        </li>
+        <li>
+            <a href="navCamere.html" class="sf-with-ul">Camere<span class="sf-sub-indicator"> »</span></a>
+            <ul style="display: none; visibility: hidden;">
+                <li class="text_capitalize">
+                    <a href="navCamera.html">Camera singola</a>
+                </li>
+                <li class="text_capitalize">
+                    <a href="navCamera.html">Camera doppia</a>
+                </li>
+                <li class="text_capitalize">
+                    <a href="navCamera.html">Camera tripla</a>
+                </li>
+                <li class="text_capitalize">
+                    <a href="navCamera.html">Camera quadrupla</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="navAttivita.html" class="sf-with-ul">Attivit&agrave;<span class="sf-sub-indicator"> »</span></a>
+            <ul style="display: none; visibility: hidden;">
+                <li class="text_capitalize">
+                    <a href="navAttivitaSingola.html">Ippovia del Gran Sasso</a>
+                </li>
+                <li class="text_capitalize">
+                    <a href="navAttivitaSingola.html">L'anello del Lago</a>
+                </li>
+                <li class="text_capitalize">
+                    <a href="navAttivitaSingola.html">Da cagnano al Gran Sasso</a>
+                </li>
+            </ul>
+        </li>
+        <li class="current-menu-item">
+            <a href="navEventi.html" class="sf-with-ul">Eventi<span class="sf-sub-indicator"> »</span></a>
+            <ul style="display: none; visibility: hidden;">
+                <li class="text_capitalize" >
+                    <a href="navEvento.html">Perdonanza Celestiniana</a>
+                </li>
+                <li class="text_capitalize">
+                    <a href="navEvento.html">Fiera della befana</a>
+                </li>
+                <li class="text_capitalize">
+                    <a href="navEvento.html">Festa del Cioccolato</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="navDintorni.html" class="sf-with-ul">Dintorni<span class="sf-sub-indicator"> »</span></a>
+            <ul style="display: none; visibility: hidden;">
+                <li class="text_capitalize">
+                    <a href="navDintorniSingolo.html">Amatrice</a>
+                </li>
+                <li class="text_capitalize">
+                    <a href="navDintorniSingolo.html">L'Aquila</a>
+                </li>
+                <li class="text_capitalize">
+                    <a href="navDintorniSingolo.html">Lago di Campotosto</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="navDoveSiamo.html">Dove Siamo</a>
+        </li>
+        <!-- END #main-menu -->
     </ul>
-        <ul class="main-menu-contact-info fr">
+    <ul class="main-menu-contact-info fr">
         <li class="info-phone"><a href="callto:+393479749101">+39 3479749101</a></li>
         <li class="info-email"><a href="mailto:info@vecchiaposta.it">info [at] vecchiaposta [dot] it</a></li>
     </ul>
@@ -193,21 +193,16 @@
     <div class="corner-right"></div>
 </div>
 
-    <!-- END #navigation -->
+<!-- END #navigation -->
 
-    <!-- BEGIN #slides -->
+<!-- BEGIN #slides -->
 
-    <!-- END #slides -->
-    <!--Camera singola-->
+<!-- END #slides -->
+<!--Camera singola-->
 <!--ITALIANO-->
-<!-- BEGIN .page-header -->
-<div class="page-header">
-    <img class="page-header-img" src="skins/theme/img/beb/eventi.jpg" alt="">
-    <!-- END .page-header -->
-</div>
 <!-- BEGIN .section -->
 <div class="section page-full clearfix">
-    <h2 class="page-title">Perdonanza Celestiniana</h2>
+    <h2 class="page-title">Perdonananza Celestiniana</h2>
     <!-- BEGIN .page-content -->
     <div class="page-content page-content-full">
         <div class="even-cols clearfix">
@@ -215,27 +210,31 @@
                 <!-- BEGIN #slides -->
                 <div id="slides1" class="" style="height: 324px; border: 1px dotted #000;">
                     <!-- BEGIN .slides_container -->
-                    <h1 style="text-align: center; position:relative; top: 45%;">SLIDER IMG</h1>
-                    <!-- END #slides -->
+                    <h1 style="text-align: center; position:relative; top: 40%;">SLIDER IMG</h1>
+                    <h2 style="text-align: center; position:relative; top: 40%;">450px * 326px</h1>
+                        <!-- END #slides -->
                 </div>
             </div>
             <div class="one-half last-col">
                 <div class="booknow-accompage">
                     <div class="book-price" style="border: 1px dotted #fff">
-                        <h2 class="price" style="text-align: center; position:relative; top: 15%%; color:#fff;">Prezzo</h2>
+                        <h2 class="price" style="text-align: center; position:relative; top: 0; color:#fff;">Prezzo</h2>
+                        <h3 class="price" style="text-align: center; position:relative; top: -15%; color:#fff;font-size: 22px;">153px * 111px</h3>
                     </div>
                     <form class="booking-form booking-form-accompage" name="bookroom" action="navPrenota.html" method="post">
                         <div style="padding-bottom: 5px; border: 1px dotted #fff; height: 75px; margin-bottom: 5px;">
-                            <h1 style="text-align: center; position:relative; top: 30%%; color:#fff;">Prenotazione</h1>
+                            <h1 style="text-align: center; position:relative; top: 20%; color:#fff;">Prenotazione</h1>
+                            <h2 style="text-align: center; position:relative; top: 10%; color:#fff;">240px * 82px</h2>
                         </div>
                         <input class="bookbutton" type="submit" value="Prenota"/>
                     </form>
                 </div>
                 <div class="service-wrapper">
-                    <h3 class="title1">Attivit&agrave; consigliata<span class="title-end"></span></h3>
+                    <h3 class="title1">Servizi<span class="title-end"></span></h3>
                     <div class="clearfix">
                         <div class="servizi-wrapper" style="border: 1px dotted #000; height: 100px; min-height:100px;">
-                            <h1 style="text-align: center; position:relative; top: 45%;">ELENCO SERVIZI</h1>
+                            <h1 style="text-align: center; position:relative; top: 30%;">ELENCO ATTIVIT&Agrave;</h1>
+                            <h2 style="text-align: center; position:relative; top: 20%;">450px * 102px</h2>
                         </div>
                     </div>
                 </div>
@@ -245,53 +244,48 @@
 
         <div style="border: 1px dotted #000; height: 189px; margin-bottom: 10px;">
             <h1 style="text-align: center; position:relative; top: 45%;">TESTO</h1>
+            <h2 style="text-align: center; position:relative; top: 45%;">920px * ???</h2>
         </div>
         <!-- END .page-content -->
     </div>
     <!-- END .section -->
 </div>
 
-    <!-- BEGIN #footer -->
-    <div id="footer" class="clearfix">
-        <!-- BEGIN .two-forths -->
-<div class="two-forths" style="height: 316px; border: 1px dotted #fff; width: 47.343%;">
-    <h1 style="text-align: center; position:relative; top: 45%;">Badge partner</h1>
-    <!-- END .two-forths -->
-</div>
+<!-- BEGIN #footer -->
+<div id="footer" class="clearfix">
+    <!-- BEGIN .two-forths -->
+    <div class="two-forths" style="height: 316px; border: 1px dotted #fff; width: 47.343%;">
+        <h1 style="text-align: center; position:relative; top: 45%;">Badge partner</h1>
+        <h2 style="text-align: center; position:relative; top: 60%;">437px * 317px</h2>
+        <!-- END .two-forths -->
+    </div>
 
-<!-- BEGIN .one-forth -->
-<div class="one-forth" style="height: 316px; border: 1px dotted #fff;">
-    <h1 style="text-align: center; position:relative; top: 45%;">Site Map</h1>
-    <!-- BEGIN .widget -->
-    <!-- END .one-forth -->
-</div>
+    <!-- BEGIN .one-forth -->
+    <div class="one-forth" style="height: 316px; border: 1px dotted #fff;">
+        <h1 style="text-align: center; position:relative; top: 45%;">Site Map</h1>
+        <h2 style="text-align: center; position:relative; top: 60%;">210px * 317px</h2>
+        <!-- BEGIN .widget -->
+        <!-- END .one-forth -->
+    </div>
 
-<!-- BEGIN .one-forth -->
-<div class="one-forth last-col" style="height: 316px; border: 1px dotted #fff;">
+    <!-- BEGIN .one-forth -->
+    <div class="one-forth last-col" style="height: 316px; border: 1px dotted #fff;">
 
-    <!-- BEGIN .widget -->
-    <h1 style="text-align: center; position:relative; top: 45%;">Flickr</h1>
-    <!-- END .one-forth -->
-</div>
+        <!-- BEGIN .widget -->
+        <h1 style="text-align: center; position:relative; top: 45%;">Flickr</h1>
+        <h2 style="text-align: center; position:relative; top: 60%;">210px * 317px</h2>
+        <!-- END .one-forth -->
+    </div>
 
-<!-- END #footer -->
+    <!-- END #footer -->
 </div>
 
 <!-- BEGIN #footer-bottom -->
 <div id="footer-bottom" class="clearfix">
-    <h1 style="text-align: center;">copyright</h1>
-
+    <h1 style="text-align: center;display: inline-block;margin-right: 30px;position: relative;left: 36%;">copyright</h1>
+    <h2 style="text-align: center;display: inline-block;position: relative;left: 37%;">960px * 63px</h2>
 </div>
-<script>
-    var $container = $('#container');
-
-    $container.imagesLoaded( function(){
-        $container.isotope({
-            // options...
-        });
-    });
-</script>
-    </div>
+</div>
 
 <!-- END .content-body -->
 </div>
