--- a/web/skins/system/dtml/it/single/sys_page_single.html
+++ b/web/skins/system/dtml/it/single/sys_page_single.html
@@ -6,7 +6,7 @@
 {else}
 <h1>Spiacente ma la pagina richiesta non &egrave; stata trovata</h1>
 {/if}
-
+          test
 <!-- MODIFICA QUESTE LINEE-->
 
 </div>
