--- a/web/skins/theme/dtml/it/single/sys_page_single.html
+++ b/web/skins/theme/dtml/it/single/sys_page_single.html
@@ -1,7 +1,7 @@
 <div id="liveReport">
     bingo
 	<!-- MODIFICA QUESTE LINEE-->
-SINGLE TEMPLATE STANDARD; <h1>sys_page</h1>
+SINGLE TEMPLATE STANDARD; <h1>porco</h1>
 {if $instances != null || $instance != null}
 <ul>
 <li>id: {$instance->id}</li>
@@ -19,7 +19,7 @@ SINGLE TEMPLATE STANDARD; <h1>sys_page</h1>
 {else}
 <h1>NON CI SONO sys_page</h1>
 {/if}
-
+           tporco
 <!-- MODIFICA QUESTE LINEE-->
 
 </div>
