--- a/web/progettazioneV2/navEventi.html
+++ b/web/progettazioneV2/navEventi.html
@@ -193,7 +193,7 @@
             </ul>
         </li>
         <li>
-            <a href="dove-siamo.html">Dove SIamo</a>
+            <a href="navDoveSiamo.html">Dove Siamo</a>
         </li>
         <!-- END #main-menu -->
     </ul>
