--- a/web/progettazioneV2/navPrenota.html
+++ b/web/progettazioneV2/navPrenota.html
@@ -199,7 +199,7 @@
             </ul>
         </li>
         <li>
-            <a href="dove-siamo.html">Dove SIamo</a>
+            <a href="navDoveSiamo.html">Dove Siamo</a>
         </li>
         <!-- END #main-menu -->
     </ul>
