--- a/web/skins/theme/dtml/it/widget/widget_map.html
+++ b/web/skins/theme/dtml/it/widget/widget_map.html
@@ -9,6 +9,11 @@
                 var mapOptions = {
                     center: new google.maps.LatLng(42.356261,13.39949),
                     zoom: 12,
+                    navigationControl: false,
+                    mapTypeControl: false,
+                    scaleControl: false,
+                    draggable: false,
+                    scrollwheel: false,
                     mapTypeId: google.maps.MapTypeId.SATELLITE
                 };
                 mapWidget = new google.maps.Map(document.getElementById("map-widget"),mapOptions);
@@ -18,6 +23,11 @@
                 var mapOptions = {
                     center: new google.maps.LatLng({$map_instance->latitudine}, {$map_instance->longitudine}),
                     zoom: 14,
+                    navigationControl: false,
+                    mapTypeControl: false,
+                    scaleControl: false,
+                    draggable: false,
+                    scrollwheel: false,
                     mapTypeId: google.maps.MapTypeId.SATELLITE
                 };
                 mapWidget = new google.maps.Map(document.getElementById("map-widget"),mapOptions);
